# SlimShady

./: .gitignore  CMakeLists.txt  README.md
Docs/: thesis.tex
Docs/Tex/: main.tex  settings.tex
Docs/Tex/chapters/: chapter_DeploymentAndShowcase.tex  chapter_ImageComparison.tex  chapter_OpenGL.tex  chapter_Specifications.tex  chapter_Summary.tex  chapter_Widgets.tex
Docs/Tex/misc/: appendix.tex  bibliography.tex  front_page.tex  proclamation.tex  summary.tex  task.tex  thanks.tex
Resources/FragmentShaders/: MissingTexture_Fragment.shader  New_Fragment.shader  Please Work_Fragment.shader  RedTriangle_Fragment.shader  Tanisa_Fragment.shader  Yikes_Fragment.shader
Resources/Tasks/: RedTriangle.json  Tanisa.json  Yikes.json
Resources/VertexAttributes/: MissingTexture.vrtxatrb  New.vrtxatrb  Please Work.vrtxatrb  RedTriangle.vrtxatrb  Tanisa.vrtxatrb  Yikes.vrtxatrb
Resources/VertexShaders/: MissingTexture_Vertex.shader  New_Vertex.shader  Please Work_Vertex.shader  RedTriangle_Vertex.shader  Tanisa_Vertex.shader  Yikes_Vertex.shader
cmake/: FindGLEW.cmake  FindGLFW.cmake  LinuxCMakeLists.txt  WindowsCMakeLists.txt
src/: App.cpp  AttributeFile.h  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Configurations.cpp  Configurations.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  RenderedContent.cpp  RenderedContent.h  Renderer.cpp  Renderer.h  SceneElement.cpp  SceneElement.h  SceneLoader.cpp  SceneLoader.h  Shader.cpp  Shader.h  ShaderType.h  ShaderTypes.h  Texture.cpp  Texture.h  UniformManager.cpp  UniformManager.h  VertexArray.cpp  VertexArray.h  VertexAttributeType.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  WidgetType.h  main.cpp
src/Frameworks/: Clock.cpp  Configurations.cpp  Configurations.h  Context.cpp  Context.h  ErrorHandler.cpp  ErrorHandler.h  FileManager.cpp  FileManager.h  ImageComparator.cpp  ImageComparator.h  InputHandler.cpp  InputHandler.h  MathUtility.h  ShaderFileManager.cpp  ShaderFileManager.h
src/Ui/: ConsoleWidget.cpp  ConsoleWidget.h  TextEditorWidget.cpp  TextEditorWidget.h  Widget.cpp  Widget.h
src/Widgets/: ConsoleWidget.cpp  ConsoleWidget.h  FileBrowserWidget.cpp  FileBrowserWidget.h  InputHandler.cpp  InputHandler.h  SceneEditorWidget.cpp  SceneEditorWidget.h  TaskWidget.cpp  TaskWidget.h  TextEditorWidget.cpp  TextEditorWidget.h  Widget.h  WidgetBroker.h
src/res/shaders/: Fragment.shader  Vertex.shader
